--- a/animal-adoption-api/front/src/scss/style.css
+++ b/animal-adoption-api/front/src/scss/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .navbar {
-  background-color: #698c88;
+  background-color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -27,34 +27,77 @@ body {
   width: 100%;
   height: 100%;
 }
-.navbar .centerLinks a,
-.navbar .rightLink a {
+.navbar .centerLinks a {
   padding: 10px 22px;
   text-decoration: none;
-  color: #fff;
+  color: #3d3d3d;
   font-size: 15px;
   font-weight: 500;
+}
+.navbar .rightLink a {
+  color: black;
+  font-size: 20px;
 }
 
 .footer {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   font-family: "Poppins", sans-serif;
-  background: #698c88;
+  background: #623AB1;
+  padding: 50px 0;
 }
-.footer h3 {
-  font-size: 25px;
-  font-weight: 500;
-  color: #2e2e2e;
+.footer .icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 50px;
+}
+.footer .icon .img {
+  width: 85px;
+  height: 77px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.footer .icon .img img {
+  width: 100%;
+  height: 100%;
+}
+.footer .icon .guestPet h1 {
+  color: #fff;
+  font-size: 40px;
+}
+.footer .footerLinks {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-left: 10px;
+  gap: 70px;
+  place-items: flex-start;
+}
+.footer .footerLinks h3 {
+  font-size: 20px;
+  font-weight: 400;
+  color: #fff;
   text-transform: capitalize;
-  margin-bottom: 36px;
+  margin-bottom: 10px;
 }
-.footer p {
+.footer .footerLinks ul {
+  padding-left: 18px;
+}
+.footer .footerLinks ul li a {
   font-size: 16px;
   font-weight: 400;
   line-height: 40px;
-  color: #7a7a7a;
+  color: #fff;
+  display: block;
+  cursor: pointer;
+  list-style: circle;
+}
+.footer .footerLinks ul li::marker {
+  color: #fff;
 }
 
 .profile {
@@ -153,5 +196,66 @@ body {
   width: 270px;
   margin-top: 30px;
   line-height: 20px;
-}/*# sourceMappingURL=style.css.map */
+}
 
+.addingName {
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  margin: 100px 0;
+}
+.addingName .top_informations {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.addingName .top_informations h1 {
+  font-size: 60px;
+  margin-bottom: 10px;
+  color: #623ab1;
+  font-weight: 700px;
+}
+.addingName .top_informations p {
+  width: 902px;
+  font-weight: 500;
+  font-size: 15px;
+}
+.addingName .form {
+  margin-top: 50px;
+}
+.addingName .form .inputs {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.addingName .form .inputs .input input {
+  padding: 24px 328px 24px 20px;
+  border-radius: 5px;
+  border: 1.5px solid #3d3d3d;
+  background: #e3d0f8;
+  outline: none;
+  caret-color: white;
+}
+.addingName .form .inputs .input input::-moz-placeholder {
+  color: rgba(61, 61, 61, 0.8980392157);
+  font-weight: 500;
+  font-size: 20px;
+}
+.addingName .form .inputs .input input::placeholder {
+  color: rgba(61, 61, 61, 0.8980392157);
+  font-weight: 500;
+  font-size: 20px;
+}
+.addingName .form .btn button {
+  font-size: 15px;
+  font-weight: 600;
+  margin-top: 40px;
+  background: #5f249f;
+  color: #fff;
+  padding: 12px 30px;
+  border-radius: 20px;
+  border: 1px solid;
+  cursor: pointer;
+}/*# sourceMappingURL=style.css.map */
